@@ -1,5 +1,7 @@
 VP 9.2.1 Changelog
 ------------------------
+- ass "Is Toy" checkbox to disable collision handling on mesh primitives completely. 
+
 - add collision detection to mesh primitives together with hit threshold and hit event
 
 - add Z offset to the backdrop options. With this settings you're able to zoom in/out the table without changing FOV/Inclination/Layback settings
